--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -43,7 +43,8 @@
                     android:id="@+id/rvListCart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"/>
+                    android:layout_marginTop="16dp"
+                    tools:listitem="@layout/item_cart"/>
 
         </RelativeLayout>
 
