--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:id="@+id/search_list_sekolah"
+                android:id="@+id/search_product"
                 app:iconifiedByDefault="false"
                 android:background="@drawable/rect"
                 app:queryHint="Search product of interest"
