--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -43,41 +43,6 @@
                                 android:padding="10dp"
                                 android:orientation="vertical">
 
-                            <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                <TextView
-
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:text="Name"
-                                        android:layout_marginStart="8dp"
-                                        android:layout_marginEnd="8dp"
-                                        android:fontFamily="@font/berlinsans"
-                                        android:textColor="@android:color/black"/>
-
-                                <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:gravity="end"
-                                        android:layout_marginStart="8dp"
-                                        android:layout_marginEnd="8dp"
-                                        android:text="AIsyah"
-                                        android:fontFamily="@font/berlinsans"/>
-
-                            </LinearLayout>
-
-                            <View
-                                    android:layout_width="match_parent"
-                                    android:layout_height="3dp"
-                                    android:background="@android:color/darker_gray"
-                                    android:layout_marginEnd="8dp"
-                                    android:layout_marginTop="8dp"
-                                    android:layout_marginStart="8dp"/>
 
                             <LinearLayout
                                     android:layout_width="match_parent"
@@ -97,14 +62,14 @@
                                         android:textColor="@android:color/black"/>
 
                                 <TextView
-                                        android:id="@+id/tvTtlProduk"
+                                        android:id="@+id/tvUsername"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:gravity="end"
                                         android:layout_marginStart="8dp"
                                         android:layout_marginEnd="8dp"
-                                        android:text="Alif_ain"
+                                        tools:text="Alif_ain"
                                         android:fontFamily="@font/berlinsans"/>
 
                             </LinearLayout>
@@ -161,9 +126,10 @@
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:gravity="end"
+                                        android:id="@+id/tvEmail"
                                         android:layout_marginStart="8dp"
                                         android:layout_marginEnd="8dp"
-                                        android:text="alifain@gmail.com"
+                                        tools:text="alifain@gmail.com"
                                         android:fontFamily="@font/berlinsans"/>
 
                             </LinearLayout>
@@ -197,9 +163,10 @@
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:gravity="end"
+                                        android:id="@+id/tvPhone"
                                         android:layout_marginStart="8dp"
                                         android:layout_marginEnd="8dp"
-                                        android:text="Alif_ain"
+                                        tools:text="0192822839"
                                         android:fontFamily="@font/berlinsans"/>
 
                             </LinearLayout>
@@ -235,6 +202,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:gravity="end"
+                                        android:id="@+id/tvAddress"
                                         android:layout_marginStart="8dp"
                                         android:layout_marginEnd="8dp"
                                         android:text="Jl. Terusan Leo No. 10 Kota Bandung"
@@ -252,96 +220,6 @@
                                     android:layout_marginStart="8dp"/>
 
                         </LinearLayout>
-                        <!--<LinearLayout-->
-                                <!--android:layout_width="match_parent"-->
-                                <!--android:layout_height="match_parent"-->
-                                <!--android:orientation="horizontal">-->
-
-                            <!--<LinearLayout-->
-                                    <!--android:layout_width="match_parent"-->
-                                    <!--android:layout_height="match_parent"-->
-                                    <!--android:layout_weight="1"-->
-                                    <!--android:orientation="vertical">-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView9"-->
-                                        <!--android:layout_width="wrap_content"-->
-                                        <!--android:layout_height="wrap_content"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:text="Email Address"-->
-                                        <!--android:textColor="@android:color/black"-->
-                                        <!--android:textStyle="bold" />-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView17"-->
-                                        <!--android:layout_width="match_parent"-->
-                                        <!--android:layout_height="2dp"-->
-                                        <!--android:layout_marginTop="10dp"-->
-                                        <!--android:layout_marginBottom="15dp"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:background="#E8BD34" />-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView8"-->
-                                        <!--android:layout_width="wrap_content"-->
-                                        <!--android:layout_height="wrap_content"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:text="Phone Number "-->
-                                        <!--android:textColor="@android:color/black"-->
-                                        <!--android:textStyle="bold" />-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView20"-->
-                                        <!--android:layout_width="match_parent"-->
-                                        <!--android:layout_height="2dp"-->
-                                        <!--android:layout_marginTop="10dp"-->
-                                        <!--android:layout_marginBottom="10dp"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:background="#E8BD34" />-->
-
-                            <!--</LinearLayout>-->
-
-                            <!--<LinearLayout-->
-                                    <!--android:layout_width="match_parent"-->
-                                    <!--android:layout_height="match_parent"-->
-                                    <!--android:layout_weight="1"-->
-                                    <!--android:gravity="right"-->
-                                    <!--android:orientation="vertical">-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView7"-->
-                                        <!--android:layout_width="wrap_content"-->
-                                        <!--android:layout_height="wrap_content"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:text="alifain@gmail.com" />-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView18"-->
-                                        <!--android:layout_width="match_parent"-->
-                                        <!--android:layout_height="2dp"-->
-                                        <!--android:layout_marginTop="10dp"-->
-                                        <!--android:layout_marginBottom="15dp"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:background="#E8BD34" />-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView6"-->
-                                        <!--android:layout_width="wrap_content"-->
-                                        <!--android:layout_height="wrap_content"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:text="+8520911xx" />-->
-
-                                <!--<TextView-->
-                                        <!--android:id="@+id/textView19"-->
-                                        <!--android:layout_width="match_parent"-->
-                                        <!--android:layout_height="2dp"-->
-                                        <!--android:layout_marginTop="10dp"-->
-                                        <!--android:layout_marginBottom="10dp"-->
-                                        <!--android:layout_weight="1"-->
-                                        <!--android:background="#E8BD34" />-->
-
-                            <!--</LinearLayout>-->
-                        <!--</LinearLayout>-->
 
                     </LinearLayout>
 
@@ -350,84 +228,63 @@
 
             </android.support.v7.widget.CardView>
 
-            <!--<android.support.v7.widget.CardView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:layout_margin="15dp"-->
-                    <!--app:cardCornerRadius="10dp"-->
-                    <!--app:cardElevation="5dp"-->
-                    <!--app:cardPreventCornerOverlap="false">-->
-
-                <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="match_parent"-->
-                        <!--android:orientation="vertical"-->
-                        <!--android:padding="10dp">-->
-
-                    <!--<TextView-->
-                            <!--android:id="@+id/textView3"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginBottom="10dp"-->
-                            <!--android:text="Biodata"-->
-                            <!--android:textColor="@android:color/black"-->
-                            <!--android:textSize="18sp"-->
-                            <!--android:textStyle="bold" />-->
-
-                    <!--<EditText-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginBottom="10dp"-->
-                            <!--android:hint="Full name"-->
-                            <!--android:textColor="@android:color/black"-->
-                            <!--android:textSize="14sp" />-->
-
-                    <!--<EditText-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginBottom="10dp"-->
-                            <!--android:hint="Address"-->
-                            <!--android:textSize="14sp" />-->
-
-                    <!--<EditText-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginBottom="10dp"-->
-                            <!--android:hint="City"-->
-                            <!--android:textSize="14sp" />-->
-
-                    <!--<EditText-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginBottom="10dp"-->
-                            <!--android:hint="Phone Number"-->
-                            <!--android:textSize="14sp" />-->
-
-                    <!--<EditText-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginBottom="20dp"-->
-                            <!--android:hint="Zip Code"-->
-                            <!--android:textSize="14sp" />-->
-
-                <!--</LinearLayout>-->
-
-
-            <!--</android.support.v7.widget.CardView>-->
-
-            <Button
-                    android:id="@+id/btnEditProfile"
+            <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="37dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="#E9BE34"
-                    android:text="Edit My Profile"
-                    android:textAllCaps="false"
-                    android:textColor="@color/cardview_light_background"
-                    android:textSize="14sp" />
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp">
+
+                <Button
+                        android:id="@+id/btnEditProfile"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="#E9BE34"
+                        android:text="Edit My Profile"
+                        android:textAllCaps="false"
+                        android:layout_gravity="start"
+                        android:textColor="@color/cardview_light_background"
+                        android:textSize="14sp" />
+
+                <Button
+                        android:id="@+id/btnListTransaksi"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="40dp"
+                        android:text="Daftar Pesanan"
+                        android:background="#E9BE34"
+                        android:textAllCaps="false"
+                        android:layout_gravity="end"
+                        android:textColor="@color/cardview_light_background"
+                        android:textSize="14sp" />
+
+                <!--<TextView-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_weight="1"-->
+                        <!--android:text="Alamat"-->
+                        <!--android:layout_marginStart="8dp"-->
+                        <!--android:layout_marginEnd="8dp"-->
+                        <!--android:fontFamily="@font/berlinsans"-->
+                        <!--android:textColor="@android:color/black"/>-->
+
+                <!--<TextView-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_weight="1"-->
+                        <!--android:gravity="end"-->
+                        <!--android:layout_marginStart="8dp"-->
+                        <!--android:layout_marginEnd="8dp"-->
+                        <!--android:text="Jl. Terusan Leo No. 10 Kota Bandung"-->
+                        <!--android:fontFamily="@font/berlinsans"/>-->
+
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
