--- a/app/src/main/res/layout/activity_detail_category.xml
+++ b/app/src/main/res/layout/activity_detail_category.xml
@@ -7,7 +7,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".category.DetailCategoryActivity">
-
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,14 +18,30 @@
             android:textColor="@android:color/black"
     />
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_kosong_detail_category"
+            android:text="Tidak Ada Data"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:drawableTop="@drawable/empty"
+    />
+
+    <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progress_bar_detail_category"
+            android:layout_gravity="center"
+    />
+
     <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_category_product_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_new_product"/>
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            tools:listitem="@layout/item_all_product"/>
 
 </LinearLayout>
