--- a/app/src/main/res/layout/activity_detail_transaksi.xml
+++ b/app/src/main/res/layout/activity_detail_transaksi.xml
@@ -21,6 +21,7 @@
                     android:layout_height="wrap_content"
                     android:text="Datar Produk"
                     android:layout_margin="16dp"
+
                     android:fontFamily="@font/berlinsans"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"/>
@@ -34,12 +35,30 @@
 
             </android.support.v7.widget.CardView>
 
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_kosong_detail_transasksi"
+                    android:text="Tidak Ada Data"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:drawableTop="@drawable/empty"
+            />
+
+            <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progress_bar_detail_transasksi"
+                    android:layout_gravity="center"
+            />
+
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/rvDetailTransaksi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    tools:listitem="@layout/item_detail_transaksi"/>
+                    />
 
             <TextView
                     android:layout_width="match_parent"
@@ -49,6 +68,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/berlinsans"
+                    android:id="@+id/tvTotalHarga"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"/>
 
@@ -74,6 +94,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="16dp">
 
+
+
             <TextView
 
                     android:layout_width="match_parent"
@@ -81,6 +103,7 @@
                     android:layout_weight="1"
                     android:text="Status Pesanan"
                     android:layout_marginStart="8dp"
+                    android:id="@+id/tvStatus"
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/berlinsans"
                     android:textStyle="bold"
@@ -106,7 +129,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="16dp"
+                android:id="@+id/ll_detail_pengiriman"
                 >
+
+
 
             <TextView
                     android:layout_width="match_parent"
@@ -249,6 +275,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="16dp"
+                android:id="@+id/ll_informasi_pemmbayaran"
         >
 
             <TextView
