--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -29,16 +29,19 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:id="@+id/imgDetail"
-                        android:src="@drawable/img_1" />
+                        tools:src="@drawable/img_1"
+                        android:contentDescription="@string/todo"/>
 
                 <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
+                        android:id="@+id/iv_back_product"
                         android:layout_gravity="start"
                         android:layout_marginTop="20dp"
                         android:layout_marginStart="16dp"
                         android:elevation="4dp"
-                        android:src="@drawable/left_arrow" />
+                        android:src="@drawable/left_arrow"
+                        android:contentDescription="@string/todo"/>
 
 
             </FrameLayout>
@@ -57,7 +60,7 @@
                         android:layout_weight="1"
                         android:id="@+id/judulProduk"
                         android:gravity="right"
-                        android:text="Niqab Bandana Poni Shiffon Arab"
+                        tools:text="Niqab Bandana Poni Shiffon Arab"
                         android:textStyle="bold"
                         android:textSize="20sp"
                         android:fontFamily="@font/berlinsans"
@@ -69,7 +72,7 @@
                         android:id="@+id/descProduk"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/berlinsans"
-                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non interdum erat. Integer pellentesque lobortis lorem. Nullam eleifend purus ex, gravida euismod nibh ornare vel. Mauris ac nibh ante. Proin vel mauris tortor. Praesent eros erat, tincidunt ac nisi vitae, placerat sollicitudin diam. Integer sollicitudin blandit nunc, quis ornare elit gravida sit amet."
+                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non interdum erat. Integer pellentesque lobortis lorem. Nullam eleifend purus ex, gravida euismod nibh ornare vel. Mauris ac nibh ante. Proin vel mauris tortor. Praesent eros erat, tincidunt ac nisi vitae, placerat sollicitudin diam. Integer sollicitudin blandit nunc, quis ornare elit gravida sit amet."
                 />
 
             </LinearLayout>
@@ -151,7 +154,8 @@
                         android:layout_gravity="center"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:text="Deskripsi Pesanan"
+                        android:id="@+id/tvDeskripsi"
+                        android:text="@string/deskripsi_pesanan"
                         android:textColor="#404547" />
 
 
@@ -161,7 +165,7 @@
                         android:id="@+id/edtDeskripsiPesan"
                         android:layout_marginEnd="20dp"
                         android:layout_marginStart="16dp"
-                        android:hint="Ukuran (S, M, L, XL,), warna"
+                        android:hint="@string/deskripsi"
                         android:paddingTop="8dp"
                 />
             </LinearLayout>
@@ -183,7 +187,7 @@
                         android:id="@+id/total1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Total"
+                        android:text="@string/total"
                         android:textSize="18sp"
                         android:fontFamily="@font/berlinsans"
                         android:textColor="#333333"
@@ -227,16 +231,23 @@
                         android:gravity="center"
                         android:paddingBottom="12dp"
                         android:paddingLeft="90dp"
+                        android:layout_marginBottom="16dp"
                         android:paddingRight="90dp"
                         android:id="@+id/btnSaveCart"
                         android:paddingTop="12dp"
-                        android:text="Add To Cart"
+                        android:text="@string/add_to_cart"
                         android:textColor="@android:color/white"
                         android:textSize="15sp"
                         android:fontFamily="@font/berlinsans"
                         android:textAllCaps="false"/>
 
             </LinearLayout>
+
+            <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progress_bar_detail_barang"
+                    android:layout_centerInParent="true"/>
 
         </RelativeLayout>
 
