--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -25,7 +25,7 @@
                 android:textStyle="bold" />
 
         <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textTtlItems"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -38,16 +38,31 @@
                 android:layout_height="wrap_content"
         >
 
-
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/rvListCart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    tools:listitem="@layout/item_cart"/>
+                    android:layout_marginTop="16dp"/>
 
         </RelativeLayout>
 
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_kosong_cart"
+                    android:text="Tidak Ada Data"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:drawableTop="@drawable/empty"
+            />
+
+            <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progress_bar_cart"
+                    android:layout_gravity="center"
+            />
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -63,7 +78,7 @@
                         android:orientation="horizontal">
 
                 <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/textViewTotal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
