--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Product"
+                android:text="All Product"
                 android:layout_margin="16dp"
                 android:fontFamily="@font/berlinsans"
                 android:textSize="20sp"
@@ -40,15 +40,31 @@
                 android:textColor="@android:color/black"
         />
 
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_kosong_home"
+                android:text="Tidak Ada Data"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:drawableTop="@drawable/empty"
+        />
+
+        <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progress_bar_home"
+                android:layout_gravity="center"
+        />
+
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/new_product_list"
+                android:id="@+id/all_product_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:listitem="@layout/item_new_product"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                tools:listitem="@layout/item_all_product"
                 android:layout_marginBottom="?android:actionBarSize"/>
 
     </LinearLayout>
