layout home, checkout

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -13,7 +13,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="20dp">
+                android:padding="19dp">
 
         <TextView
                 android:id="@+id/textView"
@@ -21,16 +21,17 @@
                 android:layout_height="wrap_content"
                 android:text="Shopping Cart"
                 android:textColor="@android:color/black"
-                android:textSize="30sp"
+                android:textSize="25sp"
+                android:fontFamily="@font/berlinsans"
                 android:textStyle="bold" />
 
         <TextView
                 android:id="@+id/textTtlItems"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="13dp"
                 android:text="Total a items"
-                android:textColor="@color/colorPrimaryDark"
+                android:fontFamily="@font/berlinsans"
                 android:textStyle="bold" />
 
         <RelativeLayout
@@ -68,6 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:gravity="center|bottom"
                     android:layout_marginBottom="?android:actionBarSize"
                     android:orientation="vertical">
 
