--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -13,6 +13,34 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:id="@+id/iv_back_product"
+                    android:layout_marginTop="27dp"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/left_arrow"
+                    android:contentDescription="@string/todo"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.03"
+                    android:lineSpacingExtra="2sp"
+                    android:text="Checkout"
+                    android:fontFamily="@font/berlinsans"
+            />
+        </LinearLayout>
+
         <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
