--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
     <ScrollView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
@@ -15,10 +14,37 @@
                 android:orientation="vertical"
         >
 
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:id="@+id/iv_back_product"
+                        android:layout_marginTop="27dp"
+                        android:layout_marginStart="16dp"
+                        android:src="@drawable/left_arrow"
+                        android:contentDescription="@string/todo"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="25sp"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginStart="20dp"
+                        android:textColor="@android:color/black"
+                        android:letterSpacing="0.03"
+                        android:lineSpacingExtra="2sp"
+                        android:text="Edit Profile"
+                        android:fontFamily="@font/berlinsans"
+                />
+            </LinearLayout>
+
             <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageView"
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/front" />
