--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".submain.CategoryFragment">
 
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:textColor="#000000"
+            android:lineSpacingExtra="3sp"
+            android:id="@+id/tv_category"
+            android:text="Category"
+            android:fontFamily="@font/berlinsans"
+            android:layout_marginStart="19dp"
+            android:layout_marginTop="19dp"
+            android:textStyle="bold"
+    />
+
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:id="@+id/viewctgry"
+            android:layout_below="@id/tv_category"
+            android:background="#000000"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            />
+
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
             android:id="@+id/category_list"
             android:layout_width="match_parent"
+            android:layout_below="@id/viewctgry"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -17,4 +44,4 @@
             tools:listitem="@layout/item_category"
     />
 
-</FrameLayout>
+</RelativeLayout>
