--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,6 +15,19 @@
                 android:orientation="vertical"
                 >
 
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="25sp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="19dp"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold"
+                        android:letterSpacing="0.03"
+                        android:fontFamily="@font/berlinsans"
+                        android:lineSpacingExtra="2sp"
+                        android:text="My Profile"
+                />
             <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageView"
                     android:layout_width="100dp"
@@ -26,7 +39,10 @@
             <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="26dp"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="5dp"
                     app:cardPreventCornerOverlap="false">
