--- a/app/src/main/res/layout/activity_detail_transaksi.xml
+++ b/app/src/main/res/layout/activity_detail_transaksi.xml
@@ -16,15 +16,34 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <TextView
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Datar Produk"
-                    android:layout_margin="16dp"
+                    android:orientation="horizontal"
+                    android:id="@+id/ll_list_trnsaksi">
 
-                    android:fontFamily="@font/berlinsans"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"/>
+                <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:id="@+id/iv_back_detail_transaksi"
+                        android:layout_marginTop="27dp"
+                        android:layout_marginStart="16dp"
+                        android:src="@drawable/left_arrow"
+                        android:contentDescription="@string/todo"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:layout_marginTop="27dp"
+                        android:layout_marginStart="20dp"
+                        android:textColor="@android:color/black"
+                        android:letterSpacing="0.03"
+                        android:lineSpacingExtra="2sp"
+                        android:text="Daftar Produk"
+                        android:fontFamily="@font/berlinsans"
+                />
+            </LinearLayout>
+
 
             <android.support.v7.widget.CardView
                     android:layout_width="fill_parent"
@@ -567,7 +586,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:inputType="textPersonName"
+                        android:inputType="number"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
                         android:textColor="@android:color/black" />
@@ -582,7 +601,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
-                        android:text="Tannggal dan Jumlah Transfer"/>
+                        android:text="Tannggal dan Jam Transfer"/>
 
                 <EditText
                         android:id="@+id/edtTxtTgl"
