--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -100,6 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Phone Number"
+                    android:inputType="number"
                     android:paddingLeft="20dp"
                     android:paddingRight="13dp"
                     android:paddingTop="13dp"
