--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -316,6 +316,7 @@
                             android:paddingTop="8dp"
                             android:paddingStart="8dp"
                             android:paddingEnd="8dp"
+                            android:inputType="number"
                             android:layout_marginTop="8dp"
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
@@ -341,7 +342,7 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
-                            android:text="Tannggal dan Jumlah Transfer"/>
+                            android:text="Tannggal dan Jam Transfer"/>
 
                     <EditText
                             android:id="@+id/editTextTgl"
