--- a/app/src/main/res/layout/activity_detail_category.xml
+++ b/app/src/main/res/layout/activity_detail_category.xml
@@ -12,6 +12,7 @@
             android:layout_height="wrap_content"
             android:text="Category"
             android:layout_margin="16dp"
+            android:id="@+id/nama_category"
             android:fontFamily="@font/berlinsans"
             android:textSize="20sp"
             android:textStyle="bold"
