--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -277,30 +277,18 @@
                         android:layout_gravity="end"
                         android:textColor="@color/cardview_light_background"
                         android:textSize="14sp" />
-
-                <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_weight="1"-->
-                        <!--android:text="Alamat"-->
-                        <!--android:layout_marginStart="8dp"-->
-                        <!--android:layout_marginEnd="8dp"-->
-                        <!--android:fontFamily="@font/berlinsans"-->
-                        <!--android:textColor="@android:color/black"/>-->
-
-                <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_weight="1"-->
-                        <!--android:gravity="end"-->
-                        <!--android:layout_marginStart="8dp"-->
-                        <!--android:layout_marginEnd="8dp"-->
-                        <!--android:text="Jl. Terusan Leo No. 10 Kota Bandung"-->
-                        <!--android:fontFamily="@font/berlinsans"/>-->
-
             </LinearLayout>
 
-
+            <Button android:layout_width="200dp"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="Log Out"
+                    android:background="#E9BE34"
+                    android:textAllCaps="false"
+                    android:textColor="@android:color/white"
+                    android:id="@+id/btnLogOut"
+            />
 
         </LinearLayout>
 
