--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,7 +78,7 @@
                 android:layout_gravity="center"
         />
 
-        <android.support.v7.widget.RecyclerView
+        <com.mlsdev.animatedrv.AnimatedRecyclerView
                 android:id="@+id/all_product_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,7 +86,14 @@
                 android:layout_marginEnd="21dp"
                 android:layout_marginStart="19dp"
                 tools:listitem="@layout/item_all_product"
-                android:layout_marginBottom="?android:actionBarSize"/>
+                android:layout_marginBottom="?android:actionBarSize"
+                app:gridLayoutManagerColumns="2"
+                app:layoutAnimation="@anim/layout_animation_from_bottom_scale"
+                app:layoutManagerReverse="false"
+                app:layoutManagerType="grid"
+                app:animationDuration="500"
+                app:layoutManagerOrientation="vertical"
+        />
 
     </LinearLayout>
 
