Update insya allah fix

--- a/app/src/main/res/layout/item_all_product.xml
+++ b/app/src/main/res/layout/item_all_product.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="170dp"
             android:layout_gravity="center"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
@@ -16,7 +16,7 @@
 
         <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
             <ImageView android:layout_width="100dp"
                        android:layout_height="113dp"
@@ -28,6 +28,8 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_centerHorizontal="true"
                     android:text="@string/niqab"
                     android:layout_below="@id/image_new_product"
                     android:id="@+id/tv_name_new_product"
